--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,8 +178,24 @@ section {
 }
 
 .header .logo img {
-    max-height: 70px;
-    margin-right: 6px;
+    max-height: 60px;
+
+}
+
+.header .logo-button {
+    margin-left: 25%;
+}
+
+@media (max-width: 1365px) {
+   .header .logo-button {
+    margin-left: 0;
+    
+   }
+}
+
+.header .logo-a {
+   text-align: center;
+   padding: 0;
 }
 
 .header .logo span {
@@ -190,10 +206,23 @@ section {
     font-family: "Nunito", sans-serif;
     margin-top: 3px;
 }
-/*-------------------------------------------------------------- # Navigation Menu --------------------------------------------------------------*/
+
+.header .btn-get-started {
+    background-color: transparent;
+    border-radius: 20px;
+    border: solid 5px white ;
+    color: #4154f1;
+    padding: 0 20px;
+    align-items: center;
+    height: 60px;
+    width: 120px;
+
+}
 /** * Desktop Navigation */
 .navbar {
     padding: 0;
+    margin-left: 50%;
+    transform: translateX(-60%);
 }
 
 .navbar ul {
@@ -209,6 +238,26 @@ section {
     position: relative;
 }
 
+.navbar .nav-link:after {    
+    background: none repeat scroll 0 0 transparent;
+    bottom: 0;
+    content: "";
+    display: block;
+    height: 2px;
+    left: 60%;
+    position: absolute;
+    background: #fff;
+    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    width: 0;
+  }
+.navbar .nav-link:hover:after { 
+    width: 100%; 
+    left: 10px; 
+  }
+
+.navbar .btn-get-started:hover {
+    border: solid 5px red;
+}
 
 .navbar a, .navbar a:focus {
     display: flex;
@@ -231,7 +280,10 @@ section {
 
 .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
     color: red;
+    
 }
+
+
 
 .navbar .getstarted, .navbar .getstarted:focus {
     background: #4154f1;
@@ -243,27 +295,24 @@ section {
 
 .navbar .getstarted:hover, .navbar .getstarted:focus:hover {
     color: #fff;
-    background: #5969f3;
+    background: white;
 }
 
 .navbar .dropdown ul {
     display: block;
     position: absolute;
-    left: 14px;
-    top: calc(100% + 30px);
     margin: 0;
-    padding: 10px 0;
     z-index: 99;
     opacity: 0;
     visibility: hidden;
-    background: #fff;
-    box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
-    transition: 0.3s;
-    border-radius: 4px;
+    background: transparent;
+    border: solid transparent;
+   
 }
 
 .navbar .dropdown ul li {
     min-width: 200px;
+    
 }
 
 .navbar .dropdown ul a {
@@ -271,6 +320,7 @@ section {
     font-size: 15px;
     text-transform: none;
     font-weight: 600;
+    border-radius: 30px;
 }
 
 .navbar .dropdown ul a i {
@@ -279,6 +329,7 @@ section {
 
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
     color: #4154f1;
+    border-radius: 30px;
 }
 
 .navbar .dropdown:hover > ul {
@@ -300,15 +351,6 @@ section {
     visibility: visible;
 }
 
-@media (min-width :992px)
-{
-    .navbar {
-        left: 50%;
-        transform: translateX(-50%);
-    }
-    
-    
-}
 @media (max-width: 1366px) {
     .navbar .dropdown .dropdown ul {
         left: -90%;
@@ -317,8 +359,8 @@ section {
     .navbar .dropdown .dropdown:hover > ul {
         left: -100%;
     }
-    
 }
+
 /** * Mobile Navigation */
 .mobile-nav-toggle {
     color: #ffffff;
@@ -327,8 +369,6 @@ section {
     display: none;
     line-height: 0;
     transition: 0.5s;
-    margin-left:95%;
-    
 }
 
 .mobile-nav-toggle.bi-x {
@@ -336,14 +376,19 @@ section {
     color: #fff;
 }
 
-@media (max-width: 991px) {
+@media (max-width: 1365px) {
     .mobile-nav-toggle {
         display: block;
     }
-   
 
     .navbar ul {
         display: none;
+    }
+    .navbar .btn-get-started {
+        border: none !important;
+    }
+    .navbar .nav-link:hover:after {
+        width: 0%;
     }
 }
 
@@ -354,7 +399,9 @@ section {
     right: 0;
     left: 0;
     bottom: 0;
-    background: rgba(1, 22, 61, 0.9);
+    width: 80%;
+    transform: translateX(-50%);
+    background: transparent;
     transition: 0.3s;
 }
 
@@ -380,12 +427,12 @@ section {
 
 .navbar-mobile a, .navbar-mobile a:focus {
     padding: 10px 20px;
-    font-size: 15px;
+    font-size: 28px;
     color: #012970;
 }
 
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-    color: #4154f1;
+    color: red;
 }
 
 .navbar-mobile .getstarted, .navbar-mobile .getstarted:focus {
@@ -513,7 +560,6 @@ video {
     font-size: 40px;
     text-align: center;
     color: pink;
-    border: solid 5px ;
     border-radius: 10px;
     padding: 5px;
 }
@@ -535,12 +581,12 @@ video {
 }
 
 
-  @-webkit-keyframes glowing {
+  @keyframes glowing {
     from {
-      box-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #4154f1, 0 0 40px #0ff, 0 0 50px #4154f1, 0 0 60px #4154f1, 0 0 70px #4154f1;
+      box-shadow:  0 0 30px #fcfffe, 0 0 40px #fff;
     }
     to {
-      box-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #4154f1, 0 0 50px #ffff, 0 0 60px #4154f1, 0 0 70px #4154f1, 0 0 80px #4154f1;
+      box-shadow: 0 0 30px #95d9f4, 0 0 40px #fcfffe;
     }
   }
 
@@ -552,16 +598,16 @@ video {
 }
 
 .icons {
-    width:120px;
-    height:120px;
+    width:100px;
+    height:100px;
     color: white;
     margin: 0;
-    border: solid 5px #4154f1;
+    border: solid 3px RED;
     border-radius:50%;
     padding:0 10px;
-    -webkit-animation: glowing 1s ease-in-out infinite alternate;
-    -moz-animation: glowing 1s ease-in-out infinite alternate;
-    animation: glowing 1s ease-in-out infinite alternate;
+    -webkit-animation: glowing 1000s ease-in-out infinite alternate;
+    -moz-animation: glowing 1000ss ease-in-out infinite alternate;
+    animation: glowing 1000ss ease-in-out infinite alternate;
     
 }
 
@@ -680,7 +726,6 @@ video {
     }
 
     .team {
-        width: 400px;
     }
 }
 
@@ -704,6 +749,7 @@ video {
 /*-------------------------------------------------------------- # Index Page --------------------------------------------------------------*/
 /*-------------------------------------------------------------- # Market Watch --------------------------------------------------------------*/
 .tokenomics {
+    margin: 5%;
     background-color: black;
 }
 
@@ -2314,8 +2360,17 @@ padding-left: 15px;
 }
 /*-------------------------------------------------------------- # Contact --------------------------------------------------------------*/
 .contact {
+    margin: 5%;
     background-color: black;
    
+}
+.container1 {
+    text-align: center;
+}
+.contact .container1 {
+    border: solid 5px red;
+    padding:5%;
+    border-radius:30px;
 }
 
 .contact h1 {
@@ -2329,7 +2384,7 @@ padding-left: 15px;
 .contact .info-box {
     color: #444444;
     background-color: transparent;
-    border: solid 5px #4154f1;
+    border: solid 5px red;
     border-radius: 20px;
     padding: 30px;
 }
