--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -556,7 +556,96 @@ video {
     top: 0;
     left: 0;
   }
+  
 
+ iframe {
+   
+    height: 100vh;
+    width: 100%;
+    
+
+    
+}
+.modal-body {
+    padding: 0;
+    margin-left: 10px;
+    
+}
+.close {
+    color: white;
+    position: absolute;
+   /* background: blue !important;
+    */
+    border: 0;
+    top: 0;
+    z-index: 99999;
+    right: 3%;
+    float: none;
+    opacity: 1;
+    font-size: 40px;
+    font-weight: 400;
+}
+.modal-footer {
+    text-align: initial;
+    border: none;
+}
+.modal-transparent {
+    background: transparent;
+}
+.modal-transparent .modal-content {
+    background: transparent;
+}
+.modal-backdrop.modal-backdrop-transparent {
+    background: transparent;
+}
+.modal-backdrop.modal-backdrop-transparent.in {
+    opacity: 0.9;
+    filter: alpha(opacity=90);
+}
+.modal-backdrop.modal-backdrop-fullscreen {
+    background: transparent;
+}
+.modal-backdrop.modal-backdrop-fullscreen.in {
+    opacity: 0.97;
+    filter: alpha(opacity=97);
+}
+.modal-fullscreen {
+    background: transparent;
+    
+}
+.modal.modal-fullscreen .modal-dialog {
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+    max-width: none; 
+    background: transparent;
+  }
+  
+  .modal.modal-fullscreen .modal-content {
+    
+    height: 100vh;
+    background: transparent;
+  }
+  
+  .modal.modal-fullscreen .modal-body {
+    overflow-y: auto; 
+  }
+@media (min-width: 768px) {
+    .modal-fullscreen .modal-dialog {
+        width: 750px;
+   }
+}
+@media (min-width: 992px) {
+    .modal-fullscreen .modal-dialog {
+        width: 970px;
+   }
+}
+@media (min-width: 1200px) {
+    .modal-fullscreen .modal-dialog {
+        width: 100%;
+   }
+}
 .hero {
     width: 100%;
     height: 110vh;
@@ -765,6 +854,19 @@ video {
         background-size: cover;
     }
 
+    .sidenav {
+        display: none;
+    }
+
+    .main {
+        margin: 0;
+    }
+    .main-anim1 {
+        margin: 0;
+        width: 100%;
+    }
+
+   
     .upper {
         display: none;
     }
